--- a/stories/templates/stories/index.html
+++ b/stories/templates/stories/index.html
@@ -1,12 +1,18 @@
 {% extends "base.html" %}
 {% load story_extras %}
 
+{% block head %}
+	<script src="{{ STATIC_URL }}js/jquery-1.9.1.min.js"></script>
+	<script src="{{ STATIC_URL }}js/vote.js"></script>
+{% endblock head %}
+
 {% block content %}
 <ol>
 {% for story in stories %}
 	<li>
 		<p class="story-title">
-			<a href="{{ story.url }}">{{ story.title }}</a> <span class="domain">({{ story.domain }})</span>
+			<a href="/vote/" id="story-vote-{{ story.id }}" class="vote"><img src="{{ STATIC_URL }}images/arrow.gif"></a>
+			<a href="{{ story.url }}" id="story-title-{{ story.id }}">{{ story.title }}</a> <span class="domain">({{ story.domain }})</span>
 		</p>
 		<p class="story-info">
 			{{ story.points }} points by {{ story.moderator.username }} {{ story.created_at|age}}
